# proxmark3

./: .Makefile.options.cache  .cdtproject  .coverity.conf.sample  .cproject  .git-blame-ignore-revs  .gitattributes  .gitconfig  .gitignore  .gitmodules  .mailmap  .playdotjs.sqlite  .playdotjs.sqlite-shm  .playdotjs.sqlite-wal  .project  .replit  .travis.yml  AGENTS.md  AUTHORS.md  CHANGELOG.md  COMPILING  COMPILING.txt  CONTRIBUTING.md  Changelog  HACKING.md  HACKING.txt  LICENSE.txt  LOG.txt  Makefile  Makefile.defs  Makefile.host  Makefile.platform  Makefile.platform.autodetect  Makefile.platform.sample  README-gj.txt  README.md  README.txt  SECURITY.md  _Sidebar.md  appveyor.yml  build.sh  (+23 more)
client/: .history  CMakeLists.txt  COMPILING  FLASH - OS.bat  Info.plist  Makefile  Makefile.mingw  README-bitlib  aes.h  aidlist.json  aidsearch.c  aidsearch.h  atr_scrap_eftlab.py  atr_scrap_pcsctools.py  cli.c  cmdanalyse.c  cmdanalyse.h  cmdcrc.c  cmdcrc.h  cmddata.c  cmddata.h  cmdflashmem.c  cmdflashmem.h  cmdflashmemspiffs.c  cmdflashmemspiffs.h  cmdhf.c  cmdhf.h  cmdhf14a.c  cmdhf14a.h  cmdhf14b.c  cmdhf14b.h  cmdhf15.c  cmdhf15.h  cmdhfcryptorf.c  cmdhfdes.c  cmdhfdes.h  cmdhfemv.c  cmdhfemv.h  cmdhfepa.c  cmdhfepa.h  (+203 more)
client/.proxmark3/: log_20200405.txt
client/amiitool/: LICENSE  Makefile  amiibo.c  amiibo.h  amiitool.c  drbg.c  drbg.h  keygen.c  keygen.h
client/android/: CMakeLists.txt  jni_tools.c  jni_tools.h  pm3_main.c
client/client_with_swig/: 00make_swig.sh  01make_client_continue.sh  02a_run_test_lua.sh  02b_run_test_py.sh  CMakeLists.txt  testembedded.lua  testembedded.py
client/cliparser/: README.md  argtable3.c  argtable3.h  cliparser.c  cliparser.h  getopt.h
client/cmake/: FindSSE.cmake
client/cmdscripts/: authbranch.cmd  authbranch2.cmd  example.cmd  rdv4_init_extflash.cmd  repeated_failures.cmd  test_psk_clone.cmd
client/crypto/: asn1dump.c  asn1dump.h  asn1utils.c  asn1utils.h  libpcrypto.c  libpcrypto.h  oids.json
client/dictionaries/: bmp_sort_keys.dic  ht2_default.dic  icbpm_sort_keys.dic  iclass_default_keys.dic  iclass_elite_keys.dic  iclass_icopyx.dic  mfc_default_keys.dic  mfc_default_keys_sorted.dic  mfc_keys_bmp_sorted.dic  mfc_keys_icbmp_sorted.dic  mfc_keys_mrzd_sorted.dic  mfdes_default_keys.dic  mfp_default_keys.dic  mfulaes_hw1.dic  mfulaes_hw2.dic  mfulaes_segment_hw1.dic  mfulaes_segment_hw2.dic  mfulaes_segment_hw3.dic  mfulc_default_keys.dic  mfulc_hw1.dic  mfulc_hw2.dic  mfulc_segment_hw1.dic  mfulc_segment_hw2.dic  mfulc_segment_hw3.dic  mrzd_sort_keys.dic  t55xx_default_pwds.dic
client/emv/: apduinfo.c  apduinfo.h  cmdemv.c  cmdemv.h  crypto.c  crypto.h  crypto_backend.h  crypto_polarssl.c  dol.c  dol.h  dump.c  dump.h  emv_pk.c  emv_pk.h  emv_pki.c  emv_pki.h  emv_pki_priv.c  emv_pki_priv.h  emv_roca.c  emv_roca.h  emv_tags.c  emv_tags.h  emvcore.c  emvcore.h  emvjson.c  emvjson.h  tlv.c  tlv.h
client/experimental_client_with_swig/: 00make_swig.sh  01make_client.sh  01make_client_cmake.sh  01make_client_cmake_continue.sh  01make_client_makefile.sh  02a_run_test_lua.sh  02a_run_test_lua_cmake.sh  02a_run_test_lua_makefile.sh  02b_run_test_py.sh  02b_run_test_py_cb.sh  02b_run_test_py_cmake.sh  02b_run_test_py_grabber.sh  02b_run_test_py_grabber_cmake.sh  02b_run_test_py_grabber_makefile.sh  02b_run_test_py_makefile.sh  CMakeLists.txt  output_grabber.py  testembedded.lua  testembedded.py  testembedded_cb.py  testembedded_grab.py
client/experimental_lib/: 00make_swig.sh  CMakeLists.txt
client/fido/: additional_ca.c  additional_ca.h  cbortools.c  cbortools.h  cose.c  cose.h  fido2.json  fidocore.c  fidocore.h
client/hardnested/: hardnested_bf_core.c  hardnested_bf_core.h  hardnested_bitarray_core.c  hardnested_bitarray_core.h  hardnested_bruteforce.c  hardnested_bruteforce.h  hardnested_tables.c
client/hid-flasher/: Info.plist  Makefile  elf.h  flash.c  flash.h  flasher.c  proxendian.h  proxusb.c  proxusb.h  sleep.h  usb_cmd.h
client/include/: hidpi.h  hidsdi.h  hidusage.h  pm3.h  pm3.hpp  pm3.i  pm3_helper.hpp
client/jansson/: Makefile  dump.c  error.c  hashtable.c  hashtable_seed.c  jansson.h  jansson_private.h  load.c  lookup3.h  memory.c  pack_unpack.c  path.c  path.h  strbuffer.c  strconv.c  utf.c  utf.h  value.c
client/lib/: 00make_lib_continue.sh  00make_swig.sh  CMakeLists.txt
client/liblua/: Makefile  lapi.c  lauxlib.c  lauxlib.h  lcode.h  lcorolib.c  lctype.c  lctype.h  ldebug.c  ldump.c  lfunc.c  lgc.c  llimits.h  lmem.c  lmem.h  loslib.c  lstate.h  lstring.c  lstring.h  lstrlib.c  lua.c  lualib.h  lvm.c  lzio.c  lzio.h
client/loclass/: blaine.c  cipher.c  cipher.h  cipherutils.c  cipherutils.h  des.c  des.h  elite_crack.c  elite_crack.h  fileutils.c  fileutils.h  hash1_brute.c  hash1_brute.h  ikeys.c  ikeys.h  loclass_information.txt  loclass_main.h  main.c
client/lualibs/: 7816_error.lua  amiibo_tools.lua  amiibolib.lua  ansicolors.lua  commands.lua  default_toys.lua  default_toys_di.lua  dkjson.lua  emulator.lua  getopt.lua  hf_reader.lua  html_dumplib.lua  htmlskel.lua  md5.lua  mf_default_keys.lua  mfc_default_keys 2.lua  pm3_cmd 2.lua  precalc.lua  read14a.lua  read14b.lua  read15.lua  taglib.lua  trace_parse.lua  utils.lua
client/luascripts/: 14araw.lua  AWID.lua  H103.lua  Legic_clone.lua  Paxton_clone.lua  brutesim.lua  calc_di.lua  calc_ev1_it.lua  calc_mizip.lua  calypso.lua  cmdline.lua  data_dumptohtml.lua  data_emulatortodump.lua  data_emulatortohtml.lua  data_example_parameters.lua  data_hex_crc.lua  data_mf_accessdecode.lua  data_mf_bin2eml.lua  data_mf_bin2html.lua  data_mf_eml2bin.lua  data_mf_eml2html.lua  data_mfc_accessdecode.lua  data_mfu_bin2eml.lua  data_read_pwd_mem_spiffs.lua  data_readpwdmem-spiffs.lua  data_readpwdmem.lua  didump.lua  dumptoemul-mfu.lua  dumptoemul.lua  e.lua  emul2dump.lua  emul2html.lua  emv_extract.lua  emv_terminal_demo.lua  formatMifare.lua  hf-writer.lua  hf_14a_aztek.lua  hf_14a_i2crevive.lua  hf_14a_protectimus_nfc.lua  hf_14a_raw.lua  (+122 more)
client/mifare/: desfire_crypto.c  desfire_crypto.h  mad.c  (+11 more)
gui/: README.md  pm3-gui.desktop.in  pyproject.toml
(+3574 files in other folders)
